Z-index issue

--- a/client/src/containers/NavigationBar/styles.css
+++ b/client/src/containers/NavigationBar/styles.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  z-index: 1;
+  z-index: 98;
 }
 
 @media (max-width: 600px) {
